--- a/html.html
+++ b/html.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
 
  <meta name="viewport™ content=
-     “width=device-width, initial-scale=1.9">
+     “width=device-width, initial-scale=1.0">
 
  <link rel="stylesheet”
   type="text/css" href="style.css">
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div id="main">
-    <hi>Крестики нолики</hi>
+    <h1>Крестики нолики</h2>
     
  <br><br>
  <input type="text" id="b1" onclick=
@@ -46,7 +46,7 @@
  <input type="text" id="b8" onclick=
      "setValue.apply(this); myfunc();" readonly>
 
- <input type="text" id=" onclick=
+ <input type="text" id=b9" onclick=
      “setValue.apply(this); myfunc();” readonly>
 
  <br><br><br>
